--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.4.2",
+    "@mui/material": "^5.4.2"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
